@@ -6,7 +6,6 @@ DESIGN
 - using alpha modulation for concentration is problematic, need a 'color scheme' ala 'Concentration' sim
 
 HIGH
-- attach wire to correct location on pH meter
 - constrain pH and volume so that student computations match displayed values, as in Java sim
 - graph
 
